[gd_scene load_steps=12 format=1]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/player_human.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]

resource/name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/rotate_head/head:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ), Vector2( 0, 5 ), Vector2( 0, 6 ), Vector2( 0, 7 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "none"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/rotate_head/head:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ) ]
}

[sub_resource type="Animation" id=3]

resource/name = "pick"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 88 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/rotate_head/head:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 8 ), Vector2( 2, 9 ), Vector2( 1, 8 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]

resource/name = "pick"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 90 ]
}

[sub_resource type="Animation" id=7]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.2 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_running_dust"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.3, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_step_on_ground"
}, {
"args": [  ],
"method": "_step_on_ground"
} ]
}

[sub_resource type="Animation" id=8]

length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fx:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fx:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83, 84, 85 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 5, 24 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fx:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fx:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 85, 84, 83, 82, 81, 80, 79, 78 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 24, 5 ]
}

[node name="player_human" type="Sprite"]

visibility/light_mask = 2
texture = ExtResource( 1 )
offset = Vector2( 0, -6 )
vframes = 12
hframes = 8
frame = 35
script/script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="body" type="Sprite" parent="."]

texture = ExtResource( 1 )
offset = Vector2( 0, -6 )
vframes = 12
hframes = 8
__meta__ = {
"_edit_lock_": true
}

[node name="rotate_head" type="Node2D" parent="body"]

transform/pos = Vector2( 0, -6 )
__meta__ = {
"_edit_lock_": true
}

[node name="head" type="Sprite" parent="body/rotate_head"]

transform/pos = Vector2( 0, 6 )
texture = ExtResource( 1 )
offset = Vector2( 0, -6 )
vframes = 12
hframes = 8
frame = 4

[node name="fx" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 1 )
offset = Vector2( 0, -12 )
vframes = 12
hframes = 8
frame = 85

[node name="anim_body" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 1 )
anims/none = SubResource( 2 )
anims/pick = SubResource( 3 )
anims/run = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_legs" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 5 )
anims/pick = SubResource( 6 )
anims/run = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_fx" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/arrive = SubResource( 8 )
anims/leave = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="finished" from="anim_body" to="." method="_on_anim_body_finished"]

[connection signal="finished" from="anim_legs" to="." method="_on_anim_legs_finished"]

[connection signal="finished" from="anim_fx" to="." method="_on_anim_fx_finished"]


